--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
             <version>1.4.7</version>
         </dependency>
 
+        <!-- solr -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-solr</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
