--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,11 @@ spring:
     url: jdbc:mysql://localhost:3306/xbhy?useUnicode=true&characterEncoding=utf-8&serverTimezone=Hongkong
     username: root
     password: root
+  application:
+    name: solr
+    data:
+      solr:
+        host: http://localhost:8983/solr/collection1
   redis:
     password: 123456
   cache:
