--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     data:
       solr:
         host: http://localhost:8983/solr/collection1
+#      mongodb:
+#        host: 192.168.137.130
+#        database: xbhy
+
   redis:
     password: 123456
   cache:
